--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,6 @@ services:
         uv sync --no-dev &&
         uv run uvicorn main:app --host 0.0.0.0 --port 8000
       "
+    env_file:
+      - .env
     restart: unless-stopped
