--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     command: >
       sh -c "
         pip install --no-cache-dir uv &&
-        uv sync --no-dev &&
+        uv sync --no-dev --frozen &&
+        uv cache prune --ci &&
         uv run uvicorn main:app --host 0.0.0.0 --port 8000
       "
     env_file:
