--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         pip install --no-cache-dir uv &&
         uv sync --no-dev --frozen &&
         uv cache prune --ci &&
-        uv run uvicorn main:app --host 0.0.0.0 --port 8000
+        uv run --no-dev uvicorn main:app --host 0.0.0.0 --port 8000
       "
     env_file:
       - .env
